syntax = "proto3";

package api.v1;

option go_package = "blog/api/v1;v1";
option java_multiple_files = true;
option java_package = "api.v1";

import "google/api/annotations.proto";

service BlogService {
    rpc CreateArticle (CreateArticleRequest) returns (CreateArticleReply) {
        option (google.api.http) = {
            post: "/v1/article/"
            body: "*"
        };
    }
    rpc UpdateArticle (UpdateArticleRequest) returns (UpdateArticleReply) {
        option (google.api.http) = {
            put: "/v1/article/{id}"
            body: "*"
        };
    }
    rpc DeleteArticle (DeleteArticleRequest) returns (DeleteArticleReply) {
        option (google.api.http) = {
            delete: "/v1/article/{id}"
        };
    }
    rpc GetArticle (GetArticleRequest) returns (GetArticleReply) {
        option (google.api.http) = {
            get: "/v1/article/{id}"
        };
    }
    rpc ListArticle (ListArticleRequest) returns (ListArticleReply) {
        option (google.api.http) = {
            get: "/v1/article/"
            additional_bindings {
                get: "/v1/author/{author_id}/articles"
            }
        };
    }
}

message Article {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int64 like = 4;
}

message CreateArticleRequest {
    string title = 1;
    string content = 2;
}

message CreateArticleReply {
    Article Article = 1;
}

message UpdateArticleRequest {
    int64 id = 1;
    string title = 2;
    string content = 3;
}

message UpdateArticleReply {
    Article Article = 1;
}

message DeleteArticleRequest {
    int64 id = 1;
}
message DeleteArticleReply {
}

message GetArticleRequest {
    int64 id = 1;
}

message GetArticleReply {
    Article Article = 1;
}

message ListArticleRequest {
}

message ListArticleReply {
    repeated Article results = 1;
}